  altering the watchlist in both the singular and QStringList overloads of
  addPath and removePath.

* QString::mid, QString::midRef and QByteArray::mid, if the position passed
  is equal to the length (that is, right after the last character/byte),
  now return an empty QString, QStringRef or QByteArray respectively.
  in Qt 4 they returned a null QString or a null QStringRef.

QtGui
-----
* Accessibility has been refactored. The hierachy of accessible objects is implemented via
  proper parent/child functions instead of using navigate which has been deprecated for this purpose.
  Table and cell interfaces have been added to qaccessible2.h

* Touch events and points have been extended to hold additional
  information like capability flags, point-specific flags, velocity,
  and raw positions.

QtWidgets
---------
* QWidget::setInputContext() and QApplication::setInputContext() are removed.
  Input contexts are now platform specific.

* QInputDialog::getInteger() has been obsoleted. Use QInputDialog::getInt() instead.

QtNetwork
---------
* QHostAddress::isLoopback() API added. Returns true if the address is
  one of the IP loopback addresses.

* QSslCertificate::serialNumber() now always returns the serial number in
  hexadecimal format.

* The openssl network backend now reads the ssl configuration file allowing
  the use of openssl engines.


QtOpenGL
--------

QtScript
--------


QTestLib
--------
* [QTBUG-20615] Autotests can now log test output to multiple destinations
  and log formats simultaneously.


****************************************************************************
*                          Database Drivers                                *
****************************************************************************


****************************************************************************
*                      Platform Specific Changes                           *
****************************************************************************